[tool.poetry]
name = "roonapi"
version = "0.1.5"
description = "Provides a python interface to interact with Roon"
authors = [
    "Greg Dowling <mail@gregdowling.com>"
]
license = "Apache-2.0"

keywords = ['roon', 'api']

readme = 'README.md'

repository = "https://github.com/pavoni/pyroon"
homepage = "https://github.com/pavoni/pyroon"

[tool.poetry.dependencies]
python = "^3.7.2"
ifaddr = ">=0.1.0"
requests = ">=2.0"
six = ">=1.10.0"
websocket_client = ">=1.4.0"

[tool.poetry.dev-dependencies]
flake8-docstrings = ">=1.3.0"
flake8 = "=5.0.4"
flake8-quotes = "^3.2.0"
mypy = ">=0.650"
pydocstyle = "3.0.0"
pylint = "==2.16.2"
pytest = "==5.2.1"
black = "23.1.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
